feat: postTodayInterest Index added & scheduler.ts added
